# mdpo-llm

./: .env.example  .gitignore  BOARD.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  test_demo.py  test_translate.py
.ccx/supervisor-audit/: 20260418T063402Z-5e9282fb.jsonl
.ccx/tasks/: T-1.md  T-10.md  T-11.md  T-2.md  T-3.md  T-4.md  T-5.md  T-6.md  T-7.md  T-8.md  T-9.md
contracts/: __init__.py
examples/: glossary.json  openai_example.py  validation_example.py
po/: __init__.py  parser.py  processor.py
scripts/: cli.py
src/mdpo_llm/: __init__.py  __main__.py  batch.py  language.py  llm_interface.py  manager.py  parser.py  placeholder.py  processor.py  prompts.py  reconstructor.py  reference_pool.py  results.py  validator.py
statics/: prompts.py
test_output/: sample.md  sample.po  sample_processed.md
test_validation/: api_docs.md  api_docs.po  api_docs_translated.md
tests/: conftest.py  test_batch.py  test_batched_processing.py  test_glossary_cascade.py  test_inplace_validation.py  test_language.py  test_llm_integration.py  test_llm_interface.py  test_manager.py  test_parser.py  test_placeholder.py  test_processor.py  test_prompt_cache.py  test_prompts.py  test_reconstructor.py  test_reference_pool.py  test_results.py  test_validator.py
